#587 #591 interim support for single file i18n output.